# sfera-mail.ru-db

./: .gitignore  CMakeLists.txt  Makefile  Makefile~  README.md  README.md~  db_containers.cpp  db_containers.hpp  db_file.cpp  db_file.hpp  db_page.cpp  db_page.hpp  libmydb.cpp  libmydb.h  mydb.c  mydb.cpp  mydb.h  mydb.hpp  mydb_capi.h  test.cpp  tester.sh
gen_workload/: example.schema.yml  example.schema.yml~  gen_workload.py~  output.in  output.in.big  without_delete.config~
runner/: Makefile  Makefile~  cachegrind.out.30077  callgrind.out.17895  callgrind.out.27887  code-32601.profraw  code-32655.profraw  code-32656.profraw  code-32674.profraw  code.profdata  database.cpp  main.cpp  main.cpp~  mydbpath  out.txt~  output.in  test_with_sophia.sh  test_with_sophia.sh~
runner/mydbpath/: data.sdbs
sfera-db/: CMakeLists.txt  Makefile
sfera-db/.build-tmp/: all-sources.cpp  db_binlog_logger.hpp  db_containers.hpp  db_data_storage.hpp  db_data_storage_config.hpp  db_page.hpp  db_stable_storage_file.hpp  pages_cache.hpp  raw_file.hpp
sfera-db/src/: cached_page_info.hpp  database.cpp  database.hpp  db_binlog.cpp  db_binlog.hpp  db_binlog_logger.cpp  db_binlog_logger.hpp  db_containers.cpp  db_containers.hpp  db_data_storage.cpp  db_data_storage.hpp  db_file_storage.cpp  db_file_storage.hpp  db_operation.cpp  db_operation.h  db_operation.hpp  db_page.cpp  db_page.hpp  db_stable_storage_file.cpp  db_stable_storage_file.hpp  libmydb.cpp  libsfera_db.cpp  libsfera_db.h  mydb.cpp  mydb.hpp  pages_cache.cpp  pages_cache.h  pages_cache.hpp  raw_file.cpp  raw_file.hpp  test.cpp
src/: db_containers.cpp  db_containers.hpp  db_file.hpp  db_page.cpp  libmydb.cpp  mydb.cpp  syscall_checker.h  test.cpp
test-bin/Debug/: Technosphere_spring2015_DB  storage.db
workloads/: output.in  output.out.yours  rwd-big.out  test.in  test.out  test.out.yours  workload.min.in~  workload.uni.out.yours
